# xgfx-examples

./: .gitignore  CMakeLists.txt  README.md  ex1.html  ex1.html.mem  ex10.html  ex10.html.mem  ex11.html  ex11.html.mem  ex2.html  ex2.html.mem  ex3.html  ex3.html.mem  ex4.html  ex4.html.mem  ex4.js  ex5.data  ex5.html  ex5.html.mem  ex5.js  ex6.html  ex6.html.mem  ex6.js  ex7.data  ex7.html  ex7.html.mem  ex7.js  ex8.data  ex8.html  ex8.html.mem  ex8.js  ex9.html  ex9.html.mem  ex9.js  index.html
ex1/: main.cpp
ex2/: main.cpp
ex3/: component_camera.h  component_physics.h  component_transform.h  input_context.h  main.cpp  render_funcs.h  system_camera.h  system_entrypoint.h  system_input.h  system_movement.h  system_render.h  system_tick.h  time.h
ex_common/: component_camera.h  component_physics.h  component_transform.h  render_context.h  render_funcs.h  system_movement.h  system_render.h  system_tick.h  time_delta.h
lib/: CMakeLists.txt
lib/cmake/: FindSDL2.cmake
lib/emscripten-renderer/include/: mesh.h  mesh_loader.h  platform.h  render_command.h  render_func.h  render_key.h  render_queue.h  renderer.h  shader_loader.h
lib/glad/: readme.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/xecs/: xecs_application.h  xecs_component.h  xecs_entity.h  xecs_entity_aux.h  xecs_entity_manager.h  xecs_system.h  xecs_type.h
lib/xecs/xecs/: application.h  component.h  entity.h  entity_aux.h  entity_manager.h
lib/xgfx/xgfx/: headers_gl.h  mesh.h  mesh_loader.h  render_command.h  render_data.h  render_func.h  render_key.h  render_queue.h  renderer.h  shader_loader.h
shl/: build_all.sh  build_desktop.sh  build_web.sh  run_desktop.sh  run_web.sh
